# AI-DrivenTradingAlgorithmSaaS

./: README.md
python_model/: example.py  requirements.txt
python_model/models/: lstm_model.py
python_model/python/: __init__.py
python_model/training/: trainer.py
python_model/utils/: data_loader.py
rust_api/: Cargo.toml
rust_api/src/: config.rs  main.rs
rust_api/src/api/: mod.rs  prediction.rs
rust_api/src/python/: mod.rs  model.rs
